--- a/data/index.html
+++ b/data/index.html
@@ -5,17 +5,13 @@
     </head>
     <body>
     <div class="container">
-        <input id="windowUrl"></input><br />
-        <button onclick="SSESubscribe()">Subscribe SSE</button>
-        <input id="SSEChannel"></input>
-        <button onclick="SSEListenEvents()">Listen SSE</button>
-        <button onclick="SSEClose()">Close SSE</button><br />
-        latitude: <input id="latitude" value="invalid"></input><br />
-        longitude: <input id="longitude" value="invalid"></input><br />
-        <div id="log">
-            <h2>Log</h2>
-            <textarea id=r readonly rows=40 style="min-width: 100%;"></textarea>
-        </div>
+        <h3>Url</h3>
+        <input id="windowUrl"></input><button onclick="SSESubscribe()">Subscribe</button>
+        <h3>IP Address</h3><input id="ip"></input>
+        <h3>Coordinate</h3>
+        <input id="latitude" value="invalid"></input><input id="longitude" value="invalid"></input>
+        <h3>Log&nbsp;<button onclick="clearLog()">Clear</button></h3>
+        <textarea id=r readonly rows=40 style="min-width: 100%;"></textarea>
     </div>
     </body>
 </html>
