--- a/data/index.html
+++ b/data/index.html
@@ -1,17 +1,32 @@
 <html>
     <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <style>
+		body { margin: 0; }
+		canvas { width: 100%; height: 100% }
+	</style>
     <script src="ssehandler.js"></script>
     </head>
     <body>
-    <div class="container">
-        <h3>Url</h3>
-        <input id="windowUrl"></input><button onclick="SSESubscribe()">Subscribe</button>
-        <h3>IP Address</h3><input id="ip"></input>
-        <h3>Coordinate</h3>
-        <input id="latitude" value="invalid"></input><input id="longitude" value="invalid"></input>
-        <h3>Log&nbsp;<button onclick="clearLog()">Clear</button></h3>
-        <textarea id=r readonly rows=40 style="min-width: 100%;"></textarea>
-    </div>
+        <div class="container">
+            <h3>Url</h3>
+            <input id="windowUrl"></input><button onclick="SSESubscribe()">Subscribe</button>
+            <h3>IP Address</h3><input id="ip"></input>
+            <h3>Coordinate</h3>
+            <input id="latitude" value="invalid"></input><input id="longitude" value="invalid"></input>
+            <h3>IMU Quaternion</h3>
+            <input id="qw" value="invalid"></input><input id="qx" value="invalid"></input><input id="qy" value="invalid"></input><input id="qz" value="invalid"></input>
+            <h3>IMU RPY</h3>
+            <input id="roll" value="invalid"></input><input id="pitch" value="invalid"></input><input id="yaw" value="invalid"></input>
+            <h3>IMU Accel</h3>
+            <input id="ax" value="invalid"></input><input id="ay" value="invalid"></input><input id="az" value="invalid"></input>
+            <h3>Log&nbsp;<button onclick="clearLog()">Clear</button></h3>
+            <textarea id=r readonly rows=40 style="min-width: 100%;"></textarea>
+        </div>
     </body>
+    <script src="three.min.js"></script>
+	<script src="MTLLoader.js"></script>
+	<script src="OBJLoader.js"></script>
+	<script src="OrbitControls.js"></script>
+	<script src="webglhandler.js"></script>
 </html>
