refine mpl code

--- a/data/index.html
+++ b/data/index.html
@@ -17,7 +17,7 @@
             <h3>IMU Quaternion</h3>
             <input id="qw" value="invalid"></input><input id="qx" value="invalid"></input><input id="qy" value="invalid"></input><input id="qz" value="invalid"></input>
             <h3>IMU RPY</h3>
-            <input id="roll" value="invalid"></input><input id="pitch" value="invalid"></input><input id="yaw" value="invalid"></input>
+            <input id="roll" value="invalid"></input><input id="pitch" value="invalid"></input><input id="yaw" value="invalid"></input><input id="heading" value="invalid"></input>
             <h3>IMU Accel</h3>
             <input id="ax" value="invalid"></input><input id="ay" value="invalid"></input><input id="az" value="invalid"></input>
             <h3>Log&nbsp;<button onclick="clearLog()">Clear</button></h3>
