refine loader notification

--- a/data/index.html
+++ b/data/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="loader">
-            <h1>Loading...</h1>
+            <h1 id="loaderTxt">Loading...</h1>
             <div class="loader"></div> 
         </div>
         <canvas id="c"></canvas>
