feat: tilt comp. using dmpQuat & fusedQuat gen.

--- a/data/index.html
+++ b/data/index.html
@@ -66,10 +66,10 @@
                 <tr><td>MAGNETOMETER</td><td></td><td></td><td></td><td></td></tr>
                 <tr>
 					<td>Mag Values</td>
-                    <td><input type="text" name="mvx" id="mvx" value="0"></td>
-                    <td><input type="text" name="mvy" id="mvy" value="0"></td>
-                    <td><input type="text" name="mvz" id="mvz" value="0"></td>
-                    <td><button onclick="ReadMagParam()">Read Mag Param</button></td>
+                    <td><input type="text" name="mx" id="mx" value="0"></td>
+                    <td><input type="text" name="my" id="my" value="0"></td>
+                    <td><input type="text" name="mz" id="mz" value="0"></td>
+                    <td><button onclick="ReadMagParam()">Read Param</button></td>
 				</tr>
                 <tr>
 					<td>Mag Bias</td>
