feat: add dmp quat info to sse

--- a/data/index.html
+++ b/data/index.html
@@ -39,6 +39,13 @@
                     <td><input id="qz" value="0"></input></td>
 				</tr>
                 <tr>
+					<td>dmp Quat</td>
+                    <td><input id="dqw" value="1"></input></td>
+                    <td><input id="dqx" value="0"></input></td>
+                    <td><input id="dqy" value="0"></input></td>
+                    <td><input id="dqz" value="0"></input></td>
+				</tr>
+                <tr>
 					<td>R Quat</td>
                     <td><input id="qrw" value="1"></input></td>
                     <td><input id="qrx" value="0"></input></td>
