feat: refine gps value sse transmit

--- a/data/index.html
+++ b/data/index.html
@@ -95,9 +95,16 @@
                 <tr><td></td><td></td><td></td><td></td><td></td></tr>
                 <tr><td></td><td></td><td></td><td></td><td></td></tr>
                 <tr>
-					<td>LatLong</td>
-                    <td><input id="latitude" value="latitude"></input></td>
-                    <td><input id="longitude" value="longitude"></input></td>
+					<td>LatLong1</td>
+                    <td><input id="lat1" value="lat1"></input></td>
+                    <td><input id="lng1" value="lng1"></input></td>
+                    <td></td>
+                    <td></td>
+				</tr>
+                <tr>
+					<td>LatLong2</td>
+                    <td><input id="lat2" value="lat2"></input></td>
+                    <td><input id="lng2" value="lng2"></input></td>
                     <td></td>
                     <td></td>
 				</tr>
